[package]
name = "kittenmews"
version = "0.1.0"
authors = ["Jennifer Glauche <=^.^=@rust19.kittenme.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
hamlrs = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = ""
features = ["tera_templates"]

